# nist-sp800-22-test-suite

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  README.md
data/: bits_nist_example.txt
docs/: ADDING-A-TEST.md  API.md  GRAPHS.md  PROJECT.md  ROADMAP.md  TESTING.md
papers/: CLAIMS.md  INDEX.md
reference/sts-2.1.2-original/: ref_dft_driver.c
src/: approx_entropy_test.cpp  assessment.cpp  assessment.hpp  basic_tests.hpp  bit_sequence.cpp  bit_sequence.hpp  block_frequency_test.cpp  complex.hpp  cusum_test.cpp  engine_factory.hpp  fft.cpp  fft.hpp  linear_complexity_test.cpp  longest_run_test.cpp  monobit_test.cpp  nist_assess_main.cpp  nist_main.cpp  nist_runner.cpp  nist_runner.hpp  non_overlapping_test.cpp  overlapping_test.cpp  random_excursions_test.cpp  random_excursions_variant_test.cpp  rank_test.cpp  runs_test.cpp  serial_test.cpp  special.cpp  special.hpp  spectral_test.cpp  spectral_test.hpp  test.hpp  test_params.hpp  test_registry.cpp  test_registry.hpp  universal_test.cpp  verdict.cpp  verdict.hpp
tests/: run_all.ps1  run_all.sh  test_assessment.cpp  test_basic.cpp  test_bit_sequence.cpp  test_fft.cpp  test_main.cpp  test_nist.cpp  test_special.cpp  test_spectral.cpp  test_verdict.cpp  validate.py
web/: Dockerfile  deploy_rngtests.bat  docker-compose.yml  eslint.config.mjs  mdx-components.tsx  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api-docs/: page.tsx
web/app/api/health/: route.ts
web/app/api/sequence/: route.ts
web/app/controversy/: page.tsx
web/app/figures/: page.tsx
web/app/paper/: layout.tsx  page.tsx
web/app/paper/discutie/: page.mdx
web/app/references/: page.tsx
web/app/sequences/: page.tsx
web/app/source/: page.tsx
web/app/tests/: page.tsx
web/app/validation/: page.tsx
web/components/: BarChart.tsx  Nav.tsx  NavDropdown.tsx  PaperNav.tsx  Plot.tsx  PlotlyChart.tsx  ResultCard.tsx  SpectrumChart.tsx  TestGrid.tsx  TestRunner.tsx  ThemeToggle.tsx  ui.tsx  useIsDark.ts
web/lib/: api-routes.test.ts  api.ts  mathx.ts  paths.ts  ratelimit.test.ts  ratelimit.ts  run.ts  spectral.ts  tests.ts  validation.test.ts  validation.ts
web/nginx/: prng-nist-tests.conf
web/scripts/: prebuild.mjs
web/types/: plotly.d.ts
(+7 files in other folders)
